--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "baseUrl": "src",
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -22,10 +18,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": [
-    "src"
-, "styles/global.css.ts", "components"  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src", "styles/global.css.ts", "components"],
+  "exclude": ["node_modules"]
 }
