--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.0",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.1",
     "@mui/styled-engine-sc": "^5.11.0",
     "@react-spring/web": "^9.6.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,6 +19,7 @@
     "next": "^13.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spring": "^9.6.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
